Added controller, model and view

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,39 @@
 # Ignore Play! working directory #
-bin/
-/db
 .eclipse
-/lib/
-/logs/
-/modules
-/project/project
-/project/target
-/target
-tmp/
-test-result
-server.pid
+.cache
+.history
+
 *.iml
 *.eml
+
+dist
+logs
+target
+tmp
+test-result
+
+server.pid
+
+tmp/
+bin/
+project/project
+project/target
+
+/out
+/db
+/modules
+/target
+
+/logs/
 /dist/
-.cache
+/.idea
+/*.iml
+/.idea_modules
+/.classpath
+/.project
+/RUNNING_PID
+/.settings
+
+project/activator-sbt-echo-play-shim.sbt
+project/activator-sbt-eclipse-shim.sbt
+project/activator-sbt-idea-shim.sbt
