--- a/conf/application.conf
+++ b/conf/application.conf
@@ -14,31 +14,19 @@ play.crypto.secret = "changeme"
 # ~~~~~
 play.i18n.langs = [ "en" ]
 
-# Router
-# ~~~~~
-# Define the Router object to use for this application.
-# This router will be looked up first when the application is starting up,
-# so make sure this is the entry point.
-# Furthermore, it's assumed your route file is named properly.
-# So for an application router like `my.application.Router`,
-# you may need to define a router file `conf/my.application.routes`.
-# Default to Routes in the root package (and conf/routes)
-# play.http.router = my.application.Routes
-
 # Database configuration
 # ~~~~~
 # You can declare as many datasources as you want.
-# By convention, the default datasource is named `default`
 #
-# db.default.driver=org.h2.Driver
-# db.default.url="jdbc:h2:mem:play"
-# db.default.username=sa
-# db.default.password=""
+rethinkdb {
 
-# Evolutions
-# ~~~~~
-# You can disable evolutions if needed
-# play.evolutions.enabled=false
+  # the database used if not explicitly specified in a query, by default test.
+  db = "playing_rethinkdb"
 
-# You can disable evolutions for a specific datasource if necessary
-# play.evolutions.db.default.enabled=false
+  # host of the RethinkDB instance. The default value is localhost.
+  host = "localhost"
+
+  # the driver port, by default 28015.
+  port = "28015"
+
+}
