Updated project description

--- a/activator.properties
+++ b/activator.properties
@@ -1,4 +1,10 @@
-name=playing-rethinkdb
-title=Play 2.4.x with RethinkDB, WebJars and Bootstrap
+name=play-rethinkdb
+title=Play with RethinkDB, WebJars and Bootstrap
 description=This activator project describes a classic CRUD application with Play 2.4.x, Scala and RethinkDB
 tags=RethinkDB,Scala,Play,WebJars,Bootstrap,Bootswatch
+authorName=Rklick Solutions
+authorLink=https://github.com/rklick-solutions
+sourceLink=https://github.com/rklick-solutions/akka-scheduler
+authorLogo=http://www.rklick.com/images/logo.png
+authorBio=Rklick Solutions is mature and dynamic solution oriented IT full service product development and customized consulting services company
+authorTwitter=RklickSolutions
