Updated tutorial page

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -21,7 +21,7 @@ play.i18n.langs = [ "en" ]
 rethinkdb {
 
   # the database used if not explicitly specified in a query, by default test.
-  db = "playing_rethinkdb"
+  db = "play_rethinkdb"
 
   # host of the RethinkDB instance. The default value is localhost.
   host = "localhost"
